2003-02-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Applied Gabriel Paubert's warning reducing patch with
        a few minor mods.

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/ru.po: Updated version from Andy Shevchenko

        * configure.in: Changed -fnative-struct to -mms-bitfields for
        gcc 3.2 mingw compiler (older mingw compilers are no longer 
        supported)

2003-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_image.nw: Added 3200x1600 to the image write dialog box.
 	Suggestions by Karel Kulhavy.

2003-01-11 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* noweb/o_arc.nw: Applied patch by Patrick to fix Bug #45: arc's 
	being drawn incorrectly with snap on.  Thanks Patrick.

	* Makefile.am: Fixed the distclean-local target. 

	* lib/system-gschemrc.in: Fixed typo (gif->png)

2003-01-10 Chris Ellec  <chrisATgtx.seul.org>

     	* noweb/o_misc.nw: Find Specific Text, replaced the strcmp used
     	to search for the text with a strstr so that we can search for
     	C12 instead of having to seach for refdes=C12. That way the user 
     	doesn't have to know what the symbol internal names are.

2003-01-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/i_basic.nw: Hierarchy/Up should never be greyed out. Fixed.

2003-01-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_arc.nw: Added the first of Patrick's suggestions to fixing
	bug #45.  Not completely fixed yet.

	* noweb/i_callbacks.nw: Added code to properly output a failed error
	message when executing File/Save All and one of the files cannot be
        saved.

2002-12-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/ext_chars.sch: Applied Egil's patch to add the new chars
	to this test schematic.

2002-12-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_attribedit.nw, o_undo.nw, o_misc.nw, o_delete.nw: Added 
	missing calls to i_update_menus()

2002-12-15 Ales Hvezda   <ahvezda@geda.seul.org>
